added endpoint to get all the devices at once
